Graphic changes on home page - new arrow, alignment. Some link fixes. On requests page, some layout changes. Removed courses layout file to borrow from other styles.

--- a/app/assets/stylesheets/lycee.css.scss
+++ b/app/assets/stylesheets/lycee.css.scss
@@ -413,7 +413,9 @@ float:right;
 }
 .right_arrow {
 float:right;
-margin-top:100px;
+margin-top:65px;
+padding-bottom:40px;
+
 }
 .list_them {
 float:right;
